--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -1,6 +1,6 @@
 body {
     width: 375px;
-    height: 500px;
+    height: 580px;
     background-color: #333;
     user-select: none;
     border: 2px dashed #828282;
@@ -18,7 +18,7 @@ input[type=text] {
 .logo {
     margin: auto;
     width: 100%;
-    padding: 25px 10px 10px 10px;
+    padding: 10px 10px 10px 10px;
     text-align: center;
     -webkit-box-sizing: border-box; /* Safari, other WebKit */
     -moz-box-sizing: border-box; /* Firefox, other Gecko */
@@ -39,20 +39,35 @@ input[type=text] {
 .options {
     padding: 10px;
     width: 100%;
+    height:300px;
+    -webkit-box-sizing: border-box; /* Safari, other WebKit */
+    -moz-box-sizing: border-box; /* Firefox, other Gecko */
+    box-sizing: border-box; /* Opera/IE 8+ */
 }
+
+    .options .name {
+        font-size:20px;
+        margin-bottom:20px;
+        display:block;
+    }
 
     .options .line {
         width: 100%;
+        margin-bottom: 7px;
+        padding-bottom: 7px;
+        -webkit-box-sizing: border-box; /* Safari, other WebKit */
+        -moz-box-sizing: border-box; /* Firefox, other Gecko */
+        box-sizing: border-box; /* Opera/IE 8+ */
     }
 
-        .options .line label {
+        .options .line .label {
             display: inline-block;
             width: 50%;
         }
 
         .options .line input {
             display: inline-block;
-            width: 45%;
+            width: 50%;
             -webkit-box-sizing: border-box; /* Safari, other WebKit */
             -moz-box-sizing: border-box; /* Firefox, other Gecko */
             box-sizing: border-box; /* Opera/IE 8+ */
@@ -78,3 +93,83 @@ input[type=text] {
 .bottom #donate{
 
 }
+
+
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 20px;
+}
+
+    .switch.x2 {
+        width:80px;
+        height:40px;
+    }
+
+    /* Hide default HTML checkbox */
+    .switch input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+    }
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+    .slider:before {
+        position: absolute;
+        content: "";
+        height: 12px;
+        width: 15px;
+        left: 4px;
+        bottom: 4px;
+        background-color: white;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+    .slider.x2:before {
+        width:35px;
+        height:32px;
+    }
+
+input:checked + .slider {
+    background-color: #2ECC71;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2ECC71;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(15px);
+    -ms-transform: translateX(15px);
+    transform: translateX(15px);
+}
+
+input:checked + .slider.x2:before {
+    -webkit-transform: translateX(34px);
+    -ms-transform: translateX(34px);
+    transform: translateX(34px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+    .slider.round:before {
+        border-radius: 50%;
+    }
