--- a/app/background/contentStyles/blur/recentMessageAvatar.css
+++ b/app/background/contentStyles/blur/recentMessageAvatar.css
@@ -2,11 +2,11 @@
     Recent Avatar
 */
 #pane-side > div:first-of-type > div > div > div > div > div > div:first-of-type > div > div {
-    filter: blur(recentMessageAvatarBlurPx); grayscale(1);
-    -webkit-filter: blur(recentMessageAvatarBlurPx); grayscale(1);
+    filter: blur(recentMessageAvatarBlurPx) grayscale(1);
+    -webkit-filter: blur(recentMessageAvatarBlurPx) grayscale(1);
 }
 
 #pane-side > div:first-of-type > div > div > div:hover * {
-    filter: unset !important; grayscale(0);
-    -webkit-filter: unset !important; grayscale(0);
+    filter: unset !important;
+    -webkit-filter: unset !important;
 }
