--- a/app/background/contentStyles/blur/recentMessageContent.css
+++ b/app/background/contentStyles/blur/recentMessageContent.css
@@ -2,11 +2,11 @@
     Recent Last Message Content
 */
 #pane-side > div:first-of-type > div > div > div > div > div > div:nth-of-type(2) > div:nth-of-type(2) > div:first-of-type > span > span:nth-of-type(3) {
-    filter: blur(recentMessageContentBlurPx); grayscale(1);
-    -webkit-filter: blur(recentMessageContentBlurPx); grayscale(1);
+    filter: blur(recentMessageContentBlurPx) grayscale(1);
+    -webkit-filter: blur(recentMessageContentBlurPx) grayscale(1);
 }
 
 #pane-side > div:first-of-type > div > div > div:hover * {
-    filter: unset !important; grayscale(0);
-    -webkit-filter: unset !important; grayscale(0);
+    filter: unset !important;
+    -webkit-filter: unset !important;
 }
