--- a/app/background/contentStyles/blur/recentMessageHeader.css
+++ b/app/background/contentStyles/blur/recentMessageHeader.css
@@ -2,11 +2,11 @@
     Recent Header
 */
 #pane-side > div:first-of-type > div > div > div > div > div > div:nth-of-type(2) > div:first-of-type > div:first-of-type > span {
-    filter: blur(recentMessageHeaderBlurPx); grayscale(1);
-    -webkit-filter: blur(recentMessageHeaderBlurPx); grayscale(1);
+    filter: blur(recentMessageHeaderBlurPx) grayscale(1);
+    -webkit-filter: blur(recentMessageHeaderBlurPx) grayscale(1);
 }
 
 #pane-side > div:first-of-type > div > div > div:hover * {
-    filter: unset !important; grayscale(0);
-    -webkit-filter: unset !important; grayscale(0);
+    filter: unset !important;
+    -webkit-filter: unset !important;
 }
