--- a/app/background/contentStyles/blur/recentMessageTick.css
+++ b/app/background/contentStyles/blur/recentMessageTick.css
@@ -2,11 +2,11 @@
     Recent Last Message Status
 */
 #pane-side > div:first-of-type > div > div > div > div > div > div:nth-of-type(2) > div:nth-of-type(2) > div:first-of-type > span > div:first-of-type {
-    filter: blur(recentMessageTickBlurPx); grayscale(1);
-    -webkit-filter: blur(recentMessageTickBlurPx); grayscale(1);
+    filter: blur(recentMessageTickBlurPx) grayscale(1);
+    -webkit-filter: blur(recentMessageTickBlurPx) grayscale(1);
 }
 
 #pane-side > div:first-of-type > div > div > div:hover * {
-    filter: unset !important; grayscale(0);
-    -webkit-filter: unset !important; grayscale(0);
+    filter: unset !important;
+    -webkit-filter: unset !important;
 }
