--- a/app/background/contentStyles/blur/recentMessageTime.css
+++ b/app/background/contentStyles/blur/recentMessageTime.css
@@ -2,11 +2,11 @@
     Recent > Last Message Time
 */
 #pane-side > div:first-of-type > div > div > div > div > div > div:nth-of-type(2) > div:first-of-type > div:nth-of-type(2) {
-    filter: blur(recentMessageTimeBlurPx); grayscale(1);
-    -webkit-filter: blur(recentMessageTimeBlurPx); grayscale(1);
+    filter: blur(recentMessageTimeBlurPx) grayscale(1);
+    -webkit-filter: blur(recentMessageTimeBlurPx) grayscale(1);
 }
 
 #pane-side > div:first-of-type > div > div > div:hover * {
-    filter: unset !important; grayscale(0);
-    -webkit-filter: unset !important; grayscale(0);
+    filter: unset !important;
+    -webkit-filter: unset !important;
 }
