--- a/app/public/css/index.css
+++ b/app/public/css/index.css
@@ -7,6 +7,8 @@ body {
     padding: 0;
     margin: 0;
     color: #d8d8d8;
+    font-family: "Segoe UI", Tahoma, sans-serif;
+    font-size: 75%;
 }
 
 input[type=text] {
